fixed alignment again wasn't moved properly but is now

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ img {
 
 /* Footer */
 footer {
-  text-align: center;
+  text-align: left;
 }
 
 /* Other page elements */
